tests/rosetta/out/Smalltalk/bitmap-write-a-ppm-file.out
/tmp/bitmap-write-a-ppm-file.st:6: parse error, expected ']'
